# Digital_heros

./: .gitignore  README.md
Backend/: .env.example  README.md  pyproject.toml  requirements.txt
Backend/app/: initial_data.py  main.py
Backend/app/api/: deps.py
Backend/app/api/v1/: api.py
Backend/app/api/v1/endpoints/: auth.py  charities.py  draws.py  scores.py  subscriptions.py  users.py
Backend/app/core/: config.py  security.py
Backend/app/db/: session.py
Backend/app/models/: models.py
Backend/app/repositories/: base.py  score.py  user.py
Backend/app/schemas/: charity.py  draw.py  score.py  token.py  user.py
Backend/app/services/: auth_service.py  draw_service.py  stripe_service.py
Backend/tests/: test_main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/charities/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/draws/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/admin/: AddCharityModal.tsx
frontend/src/components/charities/: CharitySelectionModal.tsx
frontend/src/components/dashboard/: ScoreForm.tsx  StatCard.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: axios.ts
frontend/src/services/: admin.ts  auth.ts  charities.ts  draws.ts
frontend/src/types/: index.ts
